--- a/estilos.css
+++ b/estilos.css
@@ -1,33 +1,36 @@
-.titulo{
+.titulo {
     text-align: center;
- font-family: 'Bebas Neue',
- cursive;
+    font-family: 'Bebas Neue',
+        cursive;
 }
 
-body{
+body {
     background: #000;
     color: #fff;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.container{
+.container {
     height: 200px;
+    text-align: center;
+    border: 1px solid rgb(255, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.txtInput{
-    width: 600px;
+.txtInput {
+    width: 800px;
     height: 30px;
     border-radius: 5px;
+    text-align: center;
 }
 
-.btn{
-    width:200px;
+.myButton {
+    width: 400px;
     height: 30px;
     border-radius: 5px;
-    background: none;
-    color: white;
-    border: 1px solid white;
+    color: rgb(255, 217, 0);
+    background-color: #000;
 }
+
