--- a/estilos.css
+++ b/estilos.css
@@ -20,16 +20,16 @@ body {
 }
 
 .txtInput {
-    width: 800px;
+    width: 100%;
     height: 30px;
-    border-radius: 5px;
+    border-radius: 10px;
     text-align: center;
 }
 
 .myButton {
-    width: 400px;
+    width: 80%;
     height: 30px;
-    border-radius: 5px;
+    border-radius: 10px;
     color: rgb(255, 217, 0);
     background-color: #000;
 }
